playground/notas_tests/valid/inf-02.hulk
let x = 2 in let y = x + 3 in print(y);
