playground/notas_tests/invalid/mix-01.hulk
let x = (1 + "a") == 2 in print(x);
